syntax = "proto3";
package greet;
//location of the packet you want to implement
option go_package="./greet/greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}
message GreetWithDeadlineRequest {
    Greeting greeting = 1;
}

message GreetWthDeadlineResponse {
    string result = 1;
}

service GreetService {
    //Unary name Greet
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    //Server Streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    //Client Streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    //BiDi Streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
    //unary with Deadline
    rpc GreetWithDeadline(GreetWithDeadlineRequest) returns (GreetWthDeadlineResponse) {};
}

